--- a/tests/Makefile
+++ b/tests/Makefile
@@ -7,7 +7,7 @@ CC_SRCS!=ls *.cc 2>/dev/null || :
 CPP_SRCS!=ls *.cpp 2>/dev/null || :
 CXXFLAGS+=-I${SDIR} -I../../../../Common -I../../../gusimplewhiteboard
 TESTLIBDIR?=${SDIR}/../build.host-local
-SPECIFIC_LIBS=-Xlinker -L${TESTLIBDIR} -Xlinker -lgunavigation -L/usr/local/lib -lgtest -lgtest_main -lguunits -Xlinker -rpath ${TESTLIBDIR}
+SPECIFIC_LIBS=-L${TESTLIBDIR} -lgunavigation -L/usr/local/lib -lgtest -lgtest_main -lguunits -Xlinker -rpath ${TESTLIBDIR}
 WFLAGS=
 
 all:	all-real
