Made gunavigation use subdir mk and created posix/gunavigation/gunavigation for the new location for the sources

--- a/gunavigation/ctests/Makefile
+++ b/gunavigation/ctests/Makefile
@@ -17,7 +17,7 @@ build-test: clean host
 
 test:
 
-.include "../../../mk/c++17.mk"
-.include "../../../mk/mipal.mk"
+.include "../../../../mk/c++17.mk"
+.include "../../../../mk/mipal.mk"
 
 LDFLAGS=
